# fintools_backtests

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt  service.conf
backend/.claude/: config.json
backend/data_processing/data_provider/: akshare.py  mairui.py  tushare.py
backend/data_processing/update_stocks/: download_mydata.py  download_mydata_util.py  remove_staled_stocks.py
backend/db/mysql/: db_schemas.py  db_schemas_dynamic.py
backend/end_points/: init_global.py
backend/end_points/config/: db_init.py
backend/end_points/get_rule/: rule_schema.py
backend/local_agents/: agent_schema.py
backend/local_agents/common/: utils.py
backend/local_agents/fingenius/: .gitignore  main.py
backend/local_agents/quant_agent_vlm/: default_config.py  main.py
backend/local_agents/tauric_mcp/: default_config.py  main.py
backend/mcp_servers/: test_mcp.py
backend/mcp_servers/combo_mcp_servers/: trading_agent_tools_mcp.py  trading_agent_tools_mcp_utils.py
backend/mcp_servers/database_mcp_servers/: get_database_mcp.py  get_database_mcp_utils.py
backend/mcp_servers/news_mcp_servers/: news_tools_mcp.py  news_tools_mcp_utils.py
backend/mcp_servers/tech_mcp_servers/: tech_tools_mcp.py
backend/mcp_servers/tools/: stock_utils.py  (+1 more)
backend/personal_agents/: my_daily_bot_a2a.py  my_daily_bot_local.py  stock_selecting_bot.py
backend/remote_agents_a2a/: streaming_agent_executor.py  trading_agent_client.py  trading_agent_server.py  utils.py
backend/scripts/: create_tables.py  export_database.py  import_data.py  init_db.sh
(+474 files in other folders)
