[project]
name = "am-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.17.22",
    "alipy>=1.2.5",
    "chromadb>=1.0.15",
    "dashscope>=1.23.8",
    "dask>=2025.7.0",
    "datasets>=4.0.0",
    "flask-cors>=6.0.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "gymnasium>=1.0.0",
    "iopath>=0.1.10",
    "keras-self-attention>=0.51.0",
    "langchain-anthropic>=0.3.17",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.7",
    "langchain-openai>=0.3.28",
    "langgraph>=0.4.3",
    "lxml>=6.0.0",
    "marshmallow>=3.26.1",
    "matplotlib>=3.10.3",
    "numpy==2.1.3",
    "oss2>=2.19.1",
    "pandas>=2.3.1",
    "parsel>=1.10.0",
    "prettytable>=3.16.0",
    "pydrive>=1.3.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
    "ray[rllib]>=2.47.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "sqlalchemy>=2.0.41",
    "stable-baselines3[extra]>=2.6.0",
    "stockstats>=0.6.5",
    "tensorflow==2.19.0",
    "tensorflow-metal>=1.2.0",
    "torch==2.7.0",
    "tqdm>=4.67.1",
    "tushare>=1.4.21",
    "typing-extensions>=4.14.1",
    "webargs>=8.7.0",
    "xlrd>=2.0.2",
    "yfinance>=0.2.65",
]
